--- a/.github/workflows/cron-action.yml
+++ b/.github/workflows/cron-action.yml
@@ -5,7 +5,7 @@ on:
     - cron:  '0 */3 * * *'
 
 jobs:
-  pet:
+  sync:
     env:
       PRIVATE_KEY: ${{ secrets.PrivateKey }}
     runs-on: ubuntu-latest
