--- a/.github/workflows/polygon-cron-action.yml
+++ b/.github/workflows/polygon-cron-action.yml
@@ -1,6 +1,8 @@
-name: Manual Sync
+name: Sync
 
-on: workflow_dispatch
+on:
+  schedule:
+    - cron:  '0 */3 * * *'
 
 jobs:
   sync:
@@ -13,6 +15,5 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '12'
-      - run: yarn tsc sanity.ts
-      - run: node sanity.js
-
+      - run: yarn tsc polygon/sanity.ts
+      - run: node polygon/sanity.js
